--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Initialize Flutter Project
         run: |
           # Use dynamic org to ensure unique package IDs (different apps)
-          flutter create . --platforms=android --org com.kur___lem_
+          flutter create . --platforms=android --org com.kur_hesabi
           rm -rf test 
       
       - name: Dynamic Asset Mapper (Register Global Assets)
